FeedbackController refactor + swagger. Add exceptions to GlobalExceptionHandler.